--- a/trustpoint/templates/devices/add_onboarding_type.html
+++ b/trustpoint/templates/devices/add_onboarding_type.html
@@ -20,7 +20,7 @@
                         <h5 class="card-title"><strong>Zero Touch Onboarding</strong></h5>
                         <hr class="hr-m">
                         <p class="card-text flex-grow-1">AOKI (Automated Onboarding Key Infrastructure) enables secure zero-touch onboarding of industrial devices using the Certificate Management Protocol (CMP)</p>
-                        <a href="{% url use_onboarding_url_name 1 %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
+                        <a href="{% url use_onboarding_url_name  %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
                             AOKI
                         </a>
                     </div>
