add onboarding button implemented

--- a/trustpoint/templates/devices/add_onboarding_type.html
+++ b/trustpoint/templates/devices/add_onboarding_type.html
@@ -30,7 +30,7 @@
                         <h5 class="card-title"><strong>With new DevID</strong></h5>
                         <hr class="hr-m">
                         <p class="card-text flex-grow-1">If the trustpoint shall directly issue application certificates without using a domain credential, please choose No Onboarding.</p>
-                        <a href="{% url use_no_onboarding_url  %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
+                        <a href="{% url 'pki:owner_credentials-add' %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
                             Add DevOwnerID
                         </a>
                     </div>
