Refactor CA and Credential Models

--- a/trustpoint/templates/devices/details/sub_details.html
+++ b/trustpoint/templates/devices/details/sub_details.html
@@ -124,7 +124,7 @@
             </li>
             <li>
                 <div>{% trans 'Issuing CA Type' %}</div>
-                <div>{{ device.domain.issuing_ca.get_issuing_ca_type_display }}</div>
+                <div>{{ device.domain.issuing_ca.get_ca_type_display }}</div>
             </li>
             <li>
                 <div>{% trans 'Common Name (CN)' %}</div>
