--- a/trustpoint/templates/pki/issuing_cas/issuing_cas.html
+++ b/trustpoint/templates/pki/issuing_cas/issuing_cas.html
@@ -4,8 +4,11 @@
 {% block content %}
 
 <div class="card" style="max-height: 100%; display: flex; flex-direction: column;">
-    <div class="card-header">
+    <div class="card-header d-flex justify-content-between align-items-center">
         <h1>{% trans "Issuing CAs" %}</h1>
+        <a href="{% url 'pki:cas' %}" class="btn btn-outline-primary btn-sm">
+            {% trans "CA hierarchy view" %}
+        </a>
     </div>
     <div class="card-body text-start" style="overflow-y: auto; flex: 1;">
         <table class="table">
@@ -13,10 +16,10 @@
                 <tr>
                     <th id="checkbox-column"><input type="checkbox"/></th>
                     <th>
-                        {% trans 'Domain' %}
+                            {% trans 'Domain' %}
                     </th>
                     <th>
-                        <a href="?sort={% if current_sort == 'certificate__common_name' %}-{% endif %}certificate__common_name">
+                        <a href="?sort={% if current_sort == 'common_name' %}-{% endif %}common_name">
                             {% trans 'Common Name' %}
                         </a>
                     </th>
@@ -34,7 +37,6 @@
                         </a>
                     </th>
                     <th>{% trans 'Config' %}</th>
-                    <th>{% trans 'Delete' %}</th>
                 </tr>
             </thead>
             <tbody>
@@ -44,13 +46,12 @@
                         <td class="row_checkbox">
                             <input type="checkbox" name="row_checkbox" value="{{ ca.id }}"/>
                         </td>
-                        <td>{{ ca.certificate.common_name }}</td>
-                        <td>{% for domain in ca.issuing_ca_ref.domains.all %}<a href="{% url 'pki:domains-config' pk=domain.id %}">{{ domain.unique_name }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</td>
-                        <td>{{ ca.certificate.not_valid_after }}</td>
+                        <td>{% for domain in ca.domains.all %}<a href="{% url 'pki:domains-config' pk=domain.id %}">{{ domain.unique_name }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</td>
+                        <td>{{ ca.common_name }}</td>
+                        <td>{{ ca.ca_certificate.not_valid_after }}</td>
                         <td>{{ ca.signature_suite }}</td>
                         <td>{{ ca.created_at }}</td>
                         <td><a href="config/{{ ca.id }}/" class="btn btn-primary tp-table-btn w-100">{% trans 'Configure' %}</a></td>
-                        <td><a href="delete/{{ ca.id }}/" class="btn btn-danger tp-table-btn w-100">{% trans 'Delete' %}</a></td>
                     </tr>
                 {% empty %}
                     <tr>
