--- a/trustpoint/templates/devices/add_onboarding_type.html
+++ b/trustpoint/templates/devices/add_onboarding_type.html
@@ -5,33 +5,33 @@
     <div class="card">
         <div class="card-header d-flex">
             {% if page_name == DEVICES_PAGE_DEVICES_SUBCATEGORY %}
-                <h1>{% trans 'Select Onboarding Of Devices' %}</h1>
+                <h1>{% trans 'Choose Onboarding Mechanism' %}</h1>
             {% elif page_name == DEVICES_PAGE_OPC_UA_SUBCATEGORY %}
                 <h1>{% trans 'Create new OPC UA GDS' %}</h1>
             {% endif %}
         </div>
 
         <div class="card-body py-3">
-            <h2 class="d-inline-block">Choose Onboarding Mechanism</h2>
+
 
             <div class="d-flex gap-3 mt-3">
                 <div class="card flex-fill d-flex flex-column">
                     <div class="card-body d-flex flex-column">
-                        <h5 class="card-title"><strong>Zero Touch Onboarding</strong></h5>
+                        <h5 class="card-title"><strong>IDevID</strong></h5>
                         <hr class="hr-m">
-                        <p class="card-text flex-grow-1">AOKI (Automated Onboarding Key Infrastructure) enables secure zero-touch onboarding of industrial devices using the Certificate Management Protocol (CMP)</p>
+                        <p class="card-text flex-grow-1">IDevID onboarding enables secure, Zero-Touch onboarding of industrial devices using their built-in manufacturer identity (IEEE 802.1AR). Devices authenticate automatically with their Initial Device ID, allowing Trustpoint to verify authenticity and issue operational certificates without manual intervention.</p>
                         <a href="{% url use_onboarding_url_name  %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
-                            AOKI
+                            IDevID Onboarding
                         </a>
                     </div>
                 </div>
                 <div class="card flex-fill d-flex flex-column">
                     <div class="card-body d-flex flex-column">
-                        <h5 class="card-title"><strong>With new DevID</strong></h5>
+                        <h5 class="card-title"><strong>Zero Touch Onboarding</strong></h5>
                         <hr class="hr-m">
-                        <p class="card-text flex-grow-1">If the trustpoint shall directly issue application certificates without using a domain credential, please choose No Onboarding.</p>
+                        <p class="card-text flex-grow-1">AOKI (Automated Onboarding Key Infrastructure) enables Zero-Touch onboarding of industrial devices by automatically discovering the owner environment and issuing operational certificates. It builds on device identities and standardized discovery to integrate devices securely without manual configuration.</p>
                         <a href="{% url 'pki:owner_credentials-add' %}" class="btn btn-primary mt-auto w-100" style="max-width: 250px; margin-left: auto; margin-right: auto;">
-                            Add DevOwnerID
+                            AOKI Onboarding
                         </a>
                     </div>
                 </div>
