--- a/trustpoint/templates/pki/crls/crls.html
+++ b/trustpoint/templates/pki/crls/crls.html
@@ -80,7 +80,9 @@
             <button type="button" class="btn btn-danger tp-table-select-btn me-2" data-tp-url="delete">{% trans 'Delete selected' %}</button>
         </div>
         <div class="m-1">
-            <!-- CRLs are generated automatically, no manual add button needed -->
+            <a href="{% url 'pki:crl-import' %}" class="btn btn-primary">
+                <i class="fas fa-upload"></i> {% trans 'Import CRL' %}
+            </a>
         </div>
     </div>
 </div>
